Alignment Issues

--- a/src/css/article.css
+++ b/src/css/article.css
@@ -191,6 +191,11 @@ p, figcaption, .article-body ul, .article-body ol, .article-body h4 {
     align-self: center;
 }
 
+.article-body ul, .article-body ol {
+    width: 100%;
+    align-self: flex-start;
+}
+
 .article-body {
     max-width: 90%;
     display: flex;
@@ -257,6 +262,7 @@ main {
 
 p {
     align-self: center;
+    width: 100%;
 }
 
 @media only screen and (min-width: 400px) {
